[package]
name = "srs_exporter"
version = "1.1.0"
authors = ["azusachino <azusa146@gmail.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/srs-exporter"

[dependencies]
anyhow = "1.0"
axum = "0.5"
json = "0.12"
percent-encoding = "2.1"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 0
overflow-checks = false # Disable integer overflow checks.
